src/main/java/com/example/finalprojectdtomarket/_core/errors/exception2/ApiException400.java
package com.example.finalprojectdtomarket._core.errors.exception2;

public class ApiException400 extends RuntimeException {
    public ApiException400(String msg) {
        super(msg);
    }
}
